fix dark mode bugs

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -339,6 +339,7 @@ footer.sticky-bottom {
   }
 
   .card {
+    margin-right: 10px;
     img {
       height: 140pt;
       object-fit: cover;
@@ -350,7 +351,7 @@ footer.sticky-bottom {
 
   .card-item {
     width: auto;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 
     .row {
       display: flex;
@@ -360,7 +361,7 @@ footer.sticky-bottom {
 
   .grid-item {
     width: 250px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
 
   h2.category {
