--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,10 +8,10 @@
 $red-color:           #FF3636 !default;
 $red-color-dark:      #B71C1C !default;
 $orange-color:        #F29105 !default;
-$blue-color:          #0076df !default;
-$blue-color-dark:     #00369f !default;
-$cyan-color:          #2698BA !default;
-$light-cyan-color:    lighten($cyan-color, 10%);
+$blue-color:          #00369f !default;
+$blue-color-dark:     #94bfe6 !default;
+$cyan-color:          #6face2 !default;
+$light-cyan-color:    darken($cyan-color, 40%);
 $green-color:         #00ab37 !default;
 $green-color-lime:    #B7D12A !default;
 $green-color-dark:    #009f06 !default;
